gccida/g0/skip_block_comment
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/cpplex.c:722:26: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
int  skip_block_comment( cpp_reader_0 *pfile) 
                         ^~~~~~~~~~~~
                         cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/cpplex.c:725:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // [rsp+10h] [rbp-10h] 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/cpplex.c:749:13: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( ( sch_istable[BYTE4( prevc)] & 0x400) != 0 ) 
            ^~~~~~~~~~~
            _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_block_comment/src/obj/cpplex.o] Error 1
